name:                wek
version:             0.0.1.0
synopsis:            Personal wiki/blog
-- description:
homepage:            https://github.com/k0001/wek
license:             PublicDomain
license-file:        LICENSE
author:              Renzo Carbonara
maintainer:          gnuk0001λgmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable site
  main-is: site.hs
  -- other-modules:
  build-depends:
      base ==4.5.*
    , hakyll ==4.0.*

